Fixed deprecations.